--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost:1433;DatabaseName=eaccounting;encrypt=true;trustServerCertificate=true
-spring.datasource.username=baechul
-spring.datasource.password=qoguscjf1!
+spring.datasource.url=jdbc:sqlserver://100.100.100.221:1433;DatabaseName=eaccountDB;encrypt=true;trustServerCertificate=true
+spring.datasource.username=ebid
+spring.datasource.password=2dpsdkf@
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
