Jpa Repository 설정 부분 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,29 @@
 
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost:1433;DatabaseName=eaccounting;encrypt=true;trustServerCertificate=true
-spring.datasource.username=baechul
-spring.datasource.password=qoguscjf1!
+#
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://100.100.100.221:1433;DatabaseName=ebicon;encrypt=true;trustServerCertificate=true
+#spring.datasource.username=ebid
+#spring.datasource.password=2dpsdkf@
+
+spring.datasource.hikari.jdbc-url=jdbc:sqlserver://100.100.100.221:1433;DatabaseName=ebicon;encrypt=true;trustServerCertificate=true
+spring.datasource.hikari.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.hikari.username=ebid
+spring.datasource.hikari.password=2dpsdkf@
+#hikari
+spring.datasource.hikari.auto-commit=false
+
+#JPA Settings
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+server.port = 9090
 
 logging.level.root = INFO
 logging.file.path = logs
 
 mybatis.mapper-locations=/sqlmap/*.xml
+
+
