--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,5 @@
 
-#
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://100.100.100.221:1433;DatabaseName=ebicon;encrypt=true;trustServerCertificate=true
-#spring.datasource.username=ebid
-#spring.datasource.password=2dpsdkf@
-
-spring.datasource.hikari.jdbc-url=jdbc:sqlserver://100.100.100.221:1433;DatabaseName=ebicon;encrypt=true;trustServerCertificate=true
+spring.datasource.hikari.jdbc-url=jdbc:sqlserver://100.100.100.221:1433;DatabaseName=eaccountDB;encrypt=true;trustServerCertificate=true
 spring.datasource.hikari.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.hikari.username=ebid
 spring.datasource.hikari.password=2dpsdkf@
