--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	implementation 'com.microsoft.sqlserver:mssql-jdbc'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
 
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
 
 }
 
