--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,11 @@ dependencies {
 	//MSSQL 연결
 	implementation 'com.microsoft.sqlserver:mssql-jdbc'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
+	implementation group: 'org.json', name: 'json', version: '20220924'
 
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+
+
 
 }
 
